--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
           class="wistia_embed wistia_async_6hdavgxcd3 popover=true popoverAnimateThumbnail=true"
           style="display:inline-block;height:400px;position:relative;width:320px">&nbsp;</span>
       </div>
-      <div class="_btn_hnalder  vid_btn">
-        <button>أطلبي الآن مع تخفيض %50 من السعر القديم</button>
+      <div class="_btn_hnalder  vid_btn btn_pro">
+        <button>
+          كمية محدودة !! سارعي الآن بالظغط للطلب
+        </button>
       </div>
     </div>
     <div class="sec2">
@@ -98,8 +100,10 @@
         <img class="sec5__item" src="./assets/img/booty_ass_02.gif" />
         <img class="sec5__item" src="./assets/img/ar2.jpg" />
       </div>
-      <div class="_btn_hnalder exacr">
-        <button>أطلبي الآن</button>
+      <div class="_btn_hnalder  vid_btn btn_pro">
+        <button>
+          كمية محدودة !! سارعي الآن بالظغط للطلب
+        </button>
       </div>
     </div>
     <div class="howtouse">
@@ -114,7 +118,7 @@
         <div class="first_prod">
           <div>
             <h3>
-                كريم التحاميل
+              كريم التحاميل
             </h3>
           </div>
           <div class="prod_handler_first">
@@ -129,7 +133,7 @@
         <div class="first_prod ta7a">
           <div>
             <h3>
-                التحاميل
+              التحاميل
             </h3>
           </div>
           <div class="prod_handler_first">
@@ -144,7 +148,7 @@
         <div class="first_prod ardaf">
           <div>
             <h3>
-                كريم تكبير الأرداف
+              كريم تكبير الأرداف
             </h3>
           </div>
           <div class="prod_handler_first">
@@ -159,7 +163,7 @@
         <div class="second_prod">
           <div>
             <h3>
-                زيت التسمين المعجزة
+              زيت التسمين المعجزة
             </h3>
           </div>
           <div class="prod_handler">
@@ -170,6 +174,11 @@
               ضعي الزيت على بشرة نظيفة عن طريق التدليك بحركة دائرية على الوركين لمدة 5 دقائق كل مساء بعد وضع التحميلة
             </p>
           </div>
+        </div>
+        <div class="_btn_hnalder  vid_btn btn_pro">
+          <button>
+            كمية محدودة !! سارعي الآن بالظغط للطلب
+          </button>
         </div>
       </div>
     </div>
@@ -260,8 +269,13 @@
         </div>
       </div>
     </div>
-    <div  class="sect_1prod elog es">
-      <img src="./assets/img/pr2.png"  alt="">
+    <div class="_btn_hnalder  vid_btn btn_pro">
+      <button>
+        كمية محدودة !! سارعي الآن بالظغط للطلب
+      </button>
+    </div>
+    <div class="sect_1prod elog es">
+      <img src="./assets/img/pr2.png" alt="">
     </div>
     <div class="sec1">
       <div class="wrapper">
@@ -289,8 +303,10 @@
             </li>
           </ul>
         </div>
-        <div class="_btn_hnalder">
-          <button>أطلبي الآن</button>
+        <div class="_btn_hnalder  vid_btn btn_pro">
+          <button>
+            كمية محدودة !! سارعي الآن بالظغط للطلب
+          </button>
         </div>
       </div>
     </div>
@@ -315,113 +331,111 @@
             إثارة
           </li>
         </ul>
-      
-        <div class="_btn_hnalder">
-          <button>أطلبي الآن مع تخفيض %50</button>
+        <div class="_btn_hnalder  vid_btn btn_pro">
+          <button>
+            كمية محدودة !! سارعي الآن بالظغط للطلب
+          </button>
         </div>
       </div>
-    </div>
-    <div  class="sect_1prod elog es">
-      <img src="./assets/img/pr2.png"  alt="">
-    </div>
-    <div class="sec5">
-      <div class="wrapper">
-        <div class="title">أحصلي على مؤخرة قوية و مثيرة</div>
+      <div class="sect_1prod elog es">
+        <img src="./assets/img/pr2.png" alt="">
       </div>
-      <div class="orange">
+      <div class="sec5">
         <div class="wrapper">
-          <div class="orange__title">
-            تكبير <span> بمسحة </span><b> واحدة </b><span> فقط </span>
-          </div>
-          <div class="orange__title sec">
-            <span> إليكِ آلية عمل PACK BOOST </span>
-          </div>
-          <ul class="sec5__list">
-            <li>
-              يبقي على الرطوبة والأحماض الدهنية لمؤخرة أكثر صحة و امتلاء
-            </li>
-            <li>
-              يحفز تخزين الدهون و يثير نمو العضلات في المناطق المستهدفة
-            </li>
-            <li>
-              ينعم و يشدّ الطبقات العليا للبشرة فينقص السيلوليت وعلامات
-              التمدد
-            </li>
-          </ul>
+          <div class="title">أحصلي على مؤخرة قوية و مثيرة</div>
         </div>
-        <img class="sec5__woman" src="./assets/img/sec5__woman.png" />
+        <div class="orange">
+          <div class="wrapper">
+
+            <div class="orange__title sec">
+              <span> إليكِ آلية عمل PACK BOOST </span>
+            </div>
+            <ul class="sec5__list">
+              <li>
+                يبقي على الرطوبة والأحماض الدهنية لمؤخرة أكثر صحة و امتلاء
+              </li>
+              <li>
+                يحفز تخزين الدهون و يثير نمو العضلات في المناطق المستهدفة
+              </li>
+              <li>
+                ينعم و يشدّ الطبقات العليا للبشرة فينقص السيلوليت وعلامات
+                التمدد
+              </li>
+            </ul>
+          </div>
+          <img class="sec5__woman" src="./assets/img/sec5__woman.png" />
+        </div>
+        <div class="para_sec5">
+          <p>
+            لا زيادة في الوزن :
+            <br />
+            يستهدف المنتج مؤخرتك فقط فيعمل على تكبيرها و
+            رفعها.
+            <br />
+            احصلي على مؤخرة كبيرة، مستديرة و جذابة في وقت سريع جدا يجعل مؤخرتك
+            تبدو أكثر سلاسة و أكثر تناسقاُ وأفضل من أي وقت مضى!
+          </p>
+        </div>
       </div>
-      <div class="para_sec5">
-        <p>
-          لا زيادة في الوزن :
-          <br />
-          يستهدف المنتج مؤخرتك فقط فيعمل على تكبيرها و
-          رفعها.
-          <br />
-          احصلي على مؤخرة كبيرة، مستديرة و جذابة في وقت سريع جدا يجعل مؤخرتك
-          تبدو أكثر سلاسة و أكثر تناسقاُ وأفضل من أي وقت مضى!
-        </p>
+      <div class="forum_sect">
+        <div class="forum_sect_para">
+          <p>
+            أحلامك في الحصول على مؤخرة أكبر لم تعد محض خيال.
+            <br />
+            تمتعي بمؤخرة جميلة و قوية ومتناسقة بفضل التركيبة الفريدة للتحاميل السحرية حيث
+            يمكنك أن تلاحظي شدا أكبر و مظهرا أروع في أقل من أسبوعين.
+          </p>
+        </div>
+        <div class="_child">
+          <div>
+            <form id="request-form">
+              <div>
+                <img src="./assets/img/pr2.png" alt="">
+              </div>
+              <div class="form_ctn">
+                <p>
+                  حزمة كاملة مكونة من أربع منتوجات لضمان الفعالية و النتيجة في مذة قصيرة
+                  <br />
+                  <span>
+                    فقط ب449 درهم + توصيل مجاني
+                  </span>
+                </p>
+              </div>
+              <div>
+                <input type="text" name="Fullname" id="Fullname" placeholder="الإسم الكامل" />
+              </div>
+              <div id="form_handler">
+                <input type="text" name="City" id="City" placeholder="المدينة" />
+              </div>
+              <div>
+                <input type="text" name="Phone" id="Phone" placeholder="رقم الهاتف" />
+              </div>
+              <div>
+                <input name="Date" id="Date" placeholder="" type="hidden" />
+              </div>
+              <div class="frm">
+                <i> فقط ب449 درهم + توصيل مجاني
+                </i>
+                <button id="submitButton">تأكيد الطلب</button>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="forum_sect">
-      <div class="forum_sect_para">
-        <p>
-          أحلامك في الحصول على مؤخرة أكبر لم تعد محض خيال.
-          <br />
-          تمتعي بمؤخرة جميلة و قوية ومتناسقة بفضل التركيبة الفريدة للتحاميل السحرية حيث
-          يمكنك أن تلاحظي شدا أكبر و مظهرا أروع في أقل من أسبوعين.
-        </p>
-      </div>
-      <div class="_child">
+    <footer>
+      <div class="first_child_ftr">
         <div>
-          <form id="request-form">
-            <div>
-              <img src="./assets/img/pr2.png" alt="">
-            </div>
-            <div>
-              <p>
-                حزمة كاملة مكونة من أربع منتوجات لضمان الفعالية و النتيجة في مذة قصيرة
-              <br/>
-              فقط ب449 درهم بدون مصاريف التوصيل
-              </p>
-            </div>
-            <div>
-              <h4>السعر القديم 898 درهم</h4>
-              <h3>السعر الجديد 449 درهم</h3>
-            </div>
-            <div>
-              <input type="text" name="Fullname" id="Fullname" placeholder="الإسم الكامل" />
-            </div>
-            <div id="form_handler">
-              <input type="text" name="City" id="City" placeholder="المدينة" />
-            </div>
-            <div>
-              <input type="text" name="Phone" id="Phone" placeholder="رقم الهاتف" />
-            </div>
-            <div>
-              <input name="Date" id="Date" placeholder="" type="hidden" />
-            </div>
-            <div>
-              <button id="submitButton">تأكيد الطلب</button>
-            </div>
-          </form>
+          <img src="././assets/img/akcharLogo.png" width="200" alt="" srcset="" />
+        </div>
+        <div>
+          <p>
+            Copyright © 2022 AKCHAR
+          </p>
         </div>
       </div>
-    </div>
-  </div>
-  <footer>
-    <div class="first_child_ftr">
-      <div>
-        <img src="././assets/img/akcharLogo.png" width="200" alt="" srcset="" />
-      </div>
-      <div>
-        <p>
-          Copyright © 2022 AKCHAR
-        </p>
-      </div>
-    </div>
-    <hr />
-  </footer>
+      <hr />
+    </footer>
   </div>
   <script type="text/javascript">
     var deltaDate = new Date();
