--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
   <div class="contaier">
     <div class="vid">
       <div>
-        <script src="https://fast.wistia.com/embed/medias/6hdavgxcd3.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_embed wistia_async_6hdavgxcd3" style="height:473px;position:relative;width:250px"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/6hdavgxcd3/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div>
+        <script src="https://fast.wistia.com/embed/medias/6hdavgxcd3.jsonp" async></script>
+        <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span
+          class="wistia_embed wistia_async_6hdavgxcd3 popover=true popoverAnimateThumbnail=true"
+          style="display:inline-block;height:384px;position:relative;width:350px">&nbsp;</span>
       </div>
+
       <div class="_btn_hnalder  vid_btn btn_pro">
         <button>
           كمية محدودة !! سارعي الآن بالظغط للطلب
