--- a/index.html
+++ b/index.html
@@ -57,13 +57,8 @@
 <body>
   <div class="contaier">
     <div class="vid">
-      <div>
-        <script src="https://fast.wistia.com/embed/medias/6hdavgxcd3.jsonp" async></script>
-        <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span
-          class="wistia_embed wistia_async_6hdavgxcd3 popover=true popoverAnimateThumbnail=true"
-          style="display:inline-block;height:384px;position:relative;width:350px">&nbsp;</span>
-      </div>
-
+      <iframe src="https://fast.wistia.net/embed/iframe/6hdavgxcd3" title="pack boots Video" allow="autoplay; fullscreen" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" msallowfullscreen width="350" height="663"></iframe>
+      <script src="https://fast.wistia.net/assets/external/E-v1.js" async></script>
       <div class="_btn_hnalder  vid_btn btn_pro">
         <button>
           كمية محدودة !! سارعي الآن بالظغط للطلب
